--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AluraBooks</title>
         <link rel="stylesheet" href="style.css">
- </head>
- <body>
- </body>
+  </head>
+  <body>
+        <header class="cabeçalho">
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <div class="container">
+            <img src="img/Logo.png" alt="Logo da AluraBooks">
+            <div>
+            <div class="container"></div>
+            <a  href="#"><img src="img/Favoritos.png" alt="Meus Favoritos"></a>
+            <a href="#"><img src="img/Compras.png" alt="Carinho de Compras"></a>
+            <a href="#"><img src="img/Usuário.png" alt="Meu perfil"></a>
+            <div>
+        </header>
+    </body>
 </html>
