--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AluraBooks</title>
-        <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
         <header class="cabeçalho">
-            <span class="cabeçalho__menu-hamburguer"></span>
+            <div class="container"> 
+                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+                <img src="img/Logo.jpg" alt="Logo da AluraBooks" class="container__imagem">
+            </div>
             <div class="container">
-            <img src="img/Logo.png" alt="Logo da AluraBooks">
-            <div>
-            <div class="container"></div>
-            <a  href="#"><img src="img/Favoritos.png" alt="Meus Favoritos"></a>
-            <a href="#"><img src="img/Compras.png" alt="Carinho de Compras"></a>
-            <a href="#"><img src="img/Usuário.png" alt="Meu perfil"></a>
-            <div>
+                <a href="#"><img src="img/Favoritos.jpg" alt="Meus favoritos" class="container__imagem"></a>
+                <a href="#"><img src="img/Sacola.jpg" alt="Carrinho de compras" class="container__imagem"></a>
+                <a href="#"><img src="img/Usuario.jpg" alt="Meu perfil" class="container__imagem"></a>
+            </div>
         </header>
     </body>
 </html>
