--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <header class="cabeçalho">
             <div class="container"> 
                 <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-                <img src="img/Logo.jpg" alt="Logo da AluraBooks" class="container__imagem">
             </div>
             <div class="container">
-                <a href="#"><img src="img/Favoritos.jpg" alt="Meus favoritos" class="container__imagem"></a>
+                <img src="img/Menu.png" alt="Logo da AluraBooks" class="container__imagem">
+                <a href="#"><img src="img/Logo.png" alt="Menu" class="container__imagem"></a>
+                <a href="#"><img src="img/Favoritos.png" alt="Meus favoritos" class="container__imagem"></a>
                 <a href="#"><img src="img/Sacola.jpg" alt="Carrinho de compras" class="container__imagem"></a>
-                <a href="#"><img src="img/Usuario.jpg" alt="Meu perfil" class="container__imagem"></a>
+                <a href="#"><img src="img/Usuário.png" alt="Meu perfil" class="container__imagem"></a>
             </div>
         </header>
     </body>
